move broadcast update action from admin to main to allow casual users to update
