# app/serializers/broadcast_serializer.rb
@@ -17,11 +17,22 @@ class BroadcastSerializer < ApplicationSerializer
         end
       end
     end
+    property :links do
+      property :self, type: :string, format: 'url', readOnly: true
+      property :update, type: :string, format: 'url', readOnly: true
+    end
   end
 
   attributes :id, :label, :started_at, :finished_at, :people, :details, :audio_access
 
   belongs_to :show, serializer: ShowSerializer
+
+  link(:self) { broadcast_path(object) }
+
+  link(:update) do
+    # scope is current_user
+    broadcast_path(object) if scope && scope.persisted?
+  end
 
   def audio_access
     Array(instance_options[:accessible_ids]).include?(object.id)
