# doc/swagger.json
@@ -476,6 +476,112 @@
         ]
       }
     },
+    "broadcasts/{id}": {
+      "get": {
+        "description": "Returns a single broadcast.",
+        "tags": [
+          "broadcast"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the broadcast to fetch.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successfull operation",
+            "schema": {
+              "properties": {
+                "data": {
+                  "$ref": "#/definitions/Broadcast"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "http_token": [
+
+            ]
+          },
+          {
+            "api_token": [
+
+            ]
+          },
+          {
+            "access_code": [
+
+            ]
+          }
+        ]
+      },
+      "patch": {
+        "description": "Updates the description of an an existing broadcast.",
+        "tags": [
+          "broadcast"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the broadcast to update.",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Attributes defining the broadcast to update.",
+            "required": true,
+            "schema": {
+              "properties": {
+                "data": {
+                  "$ref": "#/definitions/Broadcast"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successfull operation",
+            "schema": {
+              "properties": {
+                "data": {
+                  "$ref": "#/definitions/Broadcast"
+                }
+              }
+            }
+          },
+          "422": {
+            "$ref": "#/responses/unprocessable_entity"
+          }
+        },
+        "security": [
+          {
+            "api_token": [
+
+            ]
+          },
+          {
+            "http_token": [
+
+            ]
+          },
+          {
+            "jwt_token": [
+
+            ]
+          }
+        ]
+      }
+    },
     "/login": {
       "get": {
         "description": "Get the user object of the currently logged in user. The user may be identified by an API token, an access code, a JWT token or over FreeIPA.",
@@ -1188,94 +1294,6 @@
                 }
               }
             }
-          }
-        },
-        "security": [
-          {
-            "jwt_token": [
-
-            ]
-          }
-        ]
-      }
-    },
-    "admin/broadcasts/{id}": {
-      "get": {
-        "description": "Returns a single broadcast.",
-        "tags": [
-          "broadcast",
-          "admin"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the broadcast to fetch.",
-            "required": true,
-            "type": "integer"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successfull operation",
-            "schema": {
-              "properties": {
-                "data": {
-                  "$ref": "#/definitions/Broadcast"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "jwt_token": [
-
-            ]
-          }
-        ]
-      },
-      "patch": {
-        "description": "Updates the description of an an existing broadcast.",
-        "tags": [
-          "broadcast",
-          "admin"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the broadcast to update.",
-            "required": true,
-            "type": "integer"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Attributes defining the broadcast to update.",
-            "required": true,
-            "schema": {
-              "properties": {
-                "data": {
-                  "$ref": "#/definitions/Broadcast"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successfull operation",
-            "schema": {
-              "properties": {
-                "data": {
-                  "$ref": "#/definitions/Broadcast"
-                }
-              }
-            }
-          },
-          "422": {
-            "$ref": "#/responses/unprocessable_entity"
           }
         },
         "security": [
@@ -2531,6 +2549,20 @@
               }
             }
           }
+        },
+        "links": {
+          "properties": {
+            "self": {
+              "type": "string",
+              "format": "url",
+              "readOnly": true
+            },
+            "update": {
+              "type": "string",
+              "format": "url",
+              "readOnly": true
+            }
+          }
         }
       }
     },
@@ -2639,15 +2671,6 @@
             },
             "admin": {
               "type": "boolean",
-              "readOnly": true
-            }
-          }
-        },
-        "links": {
-          "properties": {
-            "self": {
-              "type": "string",
-              "format": "url",
               "readOnly": true
             }
           }
